fix creat rapentWrap in Parent component

--- a/modals-notifications/es5/src/sass/_modal.scss
+++ b/modals-notifications/es5/src/sass/_modal.scss
@@ -1,3 +1,20 @@
+.modals {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    visibility: hidden;
+    .modal-open & {
+        visibility: visible;
+        overflow: visible;
+        z-index: auto;
+        pointer-events: all;
+    }
+}
+
 .modal {
     display: block;
     position: relative;
@@ -19,22 +36,6 @@
         transform: translate3d(0, -50%, 0);
         animation-duration: .3s;
         animation-name: modalSlide;
-    }
-    &-container {
-        position: absolute;
-        left: 0;
-        top: 0;
-        display: block;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        visibility: hidden;
-        .modal-open & {
-            visibility: visible;
-            overflow: visible;
-            z-index: auto;
-            pointer-events: all;
-        }
     }
     &__wrap {
         position: relative;
